--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "e-commerce store",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Dennis C",
   "dependencies": {
     "gatsby": "^2.20.12",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
